--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -31,6 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - run: cd api_yamdb/
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
