--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -55,13 +55,14 @@ jobs:
       runs-on: ubuntu-latest
       needs: tests
       steps:
-        - run: cd api_yamdb/
         - name: Check out the repo
           # Проверка доступности репозитория Docker Hub для workflow
           uses: actions/checkout@v2
         - name: Set up Docker Buildx
           # Вызов сборщика контейнеров docker
           uses: docker/setup-buildx-action@v1
+          with:
+            dockerfile: ./api_yamdb/Dockerfile
         - name: Login to Docker
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1
