--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -62,7 +62,7 @@ jobs:
           # Вызов сборщика контейнеров docker
           uses: docker/setup-buildx-action@v1
           with:
-            dockerfile: ./api_yamdb/Dockerfile
+            context: api_yamdb/
         - name: Login to Docker
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1
