--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -60,9 +60,9 @@ jobs:
           uses: actions/checkout@v2
         - name: Set up Docker Buildx
           # Вызов сборщика контейнеров docker
-          uses: docker/setup-buildx-action@v1
+          uses: docker/build-push-action@v2
           with:
-            context: api_yamdb/
+            context: api_yamdb
         - name: Login to Docker
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1
