--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -60,9 +60,7 @@ jobs:
           uses: actions/checkout@v2
         - name: Set up Docker Buildx
           # Вызов сборщика контейнеров docker
-          uses: docker/build-push-action@v2
-          with:
-            context: api_yamdb
+          uses: docker/setup-buildx-action@v2
         - name: Login to Docker
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1
@@ -75,6 +73,12 @@ jobs:
           with:
             push: true
             tags: donattion/yamdb_final:latest
+
+        -  name: Build and push
+          uses: docker/build-push-action@v3
+          with:
+            context: ./api_yamdb/
+            push: true
 
   send_message:
     runs-on: ubuntu-latest
