--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -76,9 +76,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./api_yamdb/
           push: true
-          tags: user/app:latest
 
   send_message:
     runs-on: ubuntu-latest
