--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
+        file: type=local,src=./api_yamdb/Dockerfile
       - name: Login to Docker
         # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1
@@ -73,11 +74,6 @@ jobs:
         with:
           push: true
           tags: donattion/yamdb_final:latest
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: ./api_yamdb/
-          push: true
 
   send_message:
     runs-on: ubuntu-latest
