--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -61,7 +61,6 @@ jobs:
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
-        file: type=local,src=./api_yamdb/Dockerfile
       - name: Login to Docker
         # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1
@@ -72,6 +71,7 @@ jobs:
         # Пуш образа в Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: ./api_yamdb/
           push: true
           tags: donattion/yamdb_final:latest
 
