--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -62,7 +62,7 @@ jobs:
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker
-        # Запуск скрипта авторизации на D0cker Hub
+        # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
