--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
   web:
     build:
-      context: .
+      context: ../api_yamdb/
     restart: always
     volumes:
       - static_value:/app/static/
