--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,8 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    build:
-      context: ../api_yamdb/
+    image: donattion/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/app/static/
