--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -56,7 +56,7 @@ jobs:
       needs: tests
       steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Docker Hub для workflow
+        # Проверка доступности репозитория Dоcker Hub для workflow
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
