--- a/tests/yamdb_workflow.yml
+++ b/tests/yamdb_workflow.yml
@@ -56,13 +56,13 @@ jobs:
       needs: tests
       steps:
       - name: Check out the repo
-        # Проверка доступности репозитория Dоcker Hub для workflow
+        # Проверка доступности репозитория Docker Hub для workflow
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker
-        # Запуск скрипта авторизации на Dockeer Hub
+        # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
