--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
+        python -m pytest
 
   deploy:
     runs-on: ubuntu-latest
