--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,4 +6,6 @@ COPY ./ /
 
 RUN pip3 install -r /requirements.txt --no-cache-dir
 
+EXPOSE 8000
+
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
