--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7-slim
 
-WORKDIR /app
+COPY requirements.txt .
 
-COPY ./ /
+RUN pip install -r requirements.txt
 
-RUN pip3 install -r /requirements.txt --no-cache-dir
+COPY . ./
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
