--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,9 +1,20 @@
 FROM python:3.7-slim
 
-COPY requirements.txt .
+# Запустить команду создания директории внутри контейнера
+RUN mkdir /app
 
-RUN pip install -r requirements.txt
+# Скопировать с локального компьютера файл зависимостей
+# в директорию /app.
+COPY requirements.txt /app
 
-COPY . ./
+# Выполнить установку зависимостей внутри контейнера.
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
+
+# Скопировать содержимое директории /api_yamdb c локального компьютера
+# в директорию /app.
+COPY . /app
+
+# Сделать директорию /app рабочей директорией.
+WORKDIR /app
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
