--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+      - .static/redoc.yaml:/var/html/redoc/redoc.yaml
+      - .templates/redoc.html:/var/html/redoc/redoc.html
 
     depends_on:
       - web
