--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -14,6 +14,11 @@ server {
         root /var/html/;
     }
 
+    location /redoc/ {
+        root /var/html;
+        try_files $uri $uri/redoc.html;
+    }
+
     location / {
         proxy_pass http://web:8000;
     }
