--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -9,8 +9,13 @@ server {
         root /var/html/;
     }
 
+
     location /media/ {
         root /var/html/;
+    }
+
+    location /redoc/ {
+        root /var/html;
     }
 
     location / {
