--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -16,7 +16,7 @@ server {
 
     location /redoc/ {
         root /var/html;
-        try_files $uri $uri/redoc.html;
+        try_files $uri $uri/ =404;
     }
 
     location / {
